[BAPL-1893] Add all extensions and quartz ddl
Signed-off-by: ruromero <rromerom@redhat.com>